--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <label for="fullname">Full Name</label>
 
       <!-- Add a text input with the id and name attributes set to 'fullname' -->
-      <input id="fullname" name="fullname" placeholder="Enter Name" required>
+      <input type="text" id="fullname" name="fullname" placeholder="Enter Name" required>
       <!-- Include the place holder text "Enter Name" and make this input required -->
 
 
@@ -46,7 +46,7 @@
 
 
       <!-- Add a checkbox input with the id set to 'checkbox' -->
-      <input type="checkbox" id="checkbox"> First Checkbox <br>
+      <input type="checkbox" id="checkbox">
 
 
       <!-- Add an input with the type set to 'submit' -->
